final-devops-project/troubleshooting/broken/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-api
spec:
  selector: { app: notes-api }
  ports:
    - name: http
      port: 80
      targetPort: http
